--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -12,6 +12,21 @@
   file = {Benjamini_Hochberg_1995_Controlling the false discovery rate.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/D5FV8QSI/Benjamini_Hochberg_1995_Controlling the false discovery rate.pdf:application/pdf;Controlling the False Discovery Rate\: A Practical and Powerful Approach to Multiple Testing:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DDUCV4K7/2346101.html:text/html}
 }
 
+@article{schafer_shrinkage_2005,
+  title = {A {{Shrinkage Approach}} to {{Large-Scale Covariance Matrix Estimation}} and {{Implications}} for {{Functional Genomics}}},
+  volume = {4},
+  issn = {1544-6115},
+  doi = {10.2202/1544-6115.1175},
+  timestamp = {2016-08-02T19:07:24Z},
+  number = {1},
+  urldate = {2013-09-15},
+  journal = {Statistical Applications in Genetics and Molecular Biology},
+  author = {Sch{\"a}fer, Juliane and Strimmer, Korbinian},
+  month = jan,
+  year = {2005},
+  file = {Schäfer et al_2005_A shrinkage approach to large-scale covariance matrix estimation and.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/AXE5W4FW/Schäfer et al_2005_A shrinkage approach to large-scale covariance matrix estimation and.pdf:application/pdf;Schäfer_Strimmer_2005_A Shrinkage Approach to Large-Scale Covariance Matrix Estimation and.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/Q9GFBFS7/Schäfer_Strimmer_2005_A Shrinkage Approach to Large-Scale Covariance Matrix Estimation and.pdf:application/pdf;A shrinkage approach to large-scale covariance matrix estimation and implications for... - Abstract - Europe PubMed Central:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/JKX3G4SS/16646851.html:text/html}
+}
+
 @book{vaart_asymptotic_1998,
   address = {Cambridge, UK ; New York, NY, USA},
   title = {Asymptotic {{Statistics}}},
@@ -207,6 +222,44 @@
   pmid = {26745025}
 }
 
+@incollection{olivetti_induction_2012,
+  series = {Lecture Notes in Computer Science},
+  title = {Induction in {{Neuroscience}} with {{Classification}}: {{Issues}} and {{Solutions}}},
+  copyright = {\textcopyright{}2012 Springer-Verlag Berlin Heidelberg},
+  isbn = {978-3-642-34712-2 978-3-642-34713-9},
+  shorttitle = {Induction in {{Neuroscience}} with {{Classification}}},
+  abstract = {Machine learning and pattern recognition techniques are increasingly adopted in neuroimaging-based neuroscience research. In many applications a classifier is trained on brain data in order to predict a variable of interest. Two leading examples are brain decoding and clinical diagnosis. Brain decoding consists of predicting stimuli or mental states from concurrent functional brain data. In clinical diagnosis it is the presence or absence of a given medical condition that is predicted from brain data. Observing accurate classification is considered to support the hypothesis of variable-related information within brain data. In this work we briefly review the literature on statistical tests for this kind of hypothesis testing problem. We claim that the current approaches to this hypothesis testing problem are suboptimal, do not cover all useful settings, and that they could lead to wrong conclusions. We present a more accurate statistical test and provide examples of its superiority.},
+  language = {en},
+  timestamp = {2016-08-02T19:07:56Z},
+  number = {7263},
+  urldate = {2016-02-15},
+  booktitle = {Machine {{Learning}} and {{Interpretation}} in {{Neuroimaging}}},
+  publisher = {{Springer Berlin Heidelberg}},
+  author = {Olivetti, Emanuele and Greiner, Susanne and Avesani, Paolo},
+  editor = {Langs, Georg and Rish, Irina and Grosse-Wentrup, Moritz and Murphy, Brian},
+  year = {2012},
+  keywords = {Computer Applications,Computer Imaging; Vision; Pattern Recognition and Graphics,Data Mining and Knowledge Discovery,Image Processing and Computer Vision,pattern recognition,Probability and Statistics in Computer Science},
+  pages = {42--50},
+  file = {Olivetti et al_2012_Induction in Neuroscience with Classification.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DNCZRCNJ/Olivetti et al_2012_Induction in Neuroscience with Classification.pdf:application/pdf;Olivetti et al_2012_Induction in Neuroscience with Classification.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/P89G3D73/Olivetti et al_2012_Induction in Neuroscience with Classification.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/BBENTVTF/978-3-642-34713-9_6.html:text/html;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TF8AQ2N9/978-3-642-34713-9_6.html:text/html},
+  doi = {10.1007/978-3-642-34713-9_6}
+}
+
+@article{gretton_kernel_2012-1,
+  title = {A {{Kernel Two}}-sample {{Test}}},
+  volume = {13},
+  issn = {1532-4435},
+  abstract = {We propose a framework for analyzing and comparing distributions, which we use to construct statistical tests to determine if two samples are drawn from different distributions. Our test statistic is the largest difference in expectations over functions in the unit ball of a reproducing kernel Hilbert space (RKHS), and is called the maximum mean discrepancy (MMD).We present two distribution free tests based on large deviation bounds for the MMD, and a third test based on the asymptotic distribution of this statistic. The MMD can be computed in quadratic time, although efficient linear time approximations are available. Our statistic is an instance of an integral probability metric, and various classical metrics on distributions are obtained when alternative function classes are used in place of an RKHS. We apply our two-sample tests to a variety of problems, including attribute matching for databases using the Hungarian marriage method, where they perform strongly. Excellent performance is also obtained when comparing distributions over graphs, for which these are the first such tests.},
+  timestamp = {2016-08-02T19:07:12Z},
+  urldate = {2016-02-15},
+  journal = {J. Mach. Learn. Res.},
+  author = {Gretton, Arthur and Borgwardt, Karsten M. and Rasch, Malte J. and Sch{\"o}lkopf, Bernhard and Smola, Alexander},
+  month = mar,
+  year = {2012},
+  keywords = {Hypothesis testing,integral probability metric,kernel methods,schema matching,two-sample test,uniform convergence bounds},
+  pages = {723--773},
+  file = {Gretton et al_2012_A Kernel Two-Sample Test.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/GSTU3PBK/Gretton et al_2012_A Kernel Two-Sample Test.pdf:application/pdf;Gretton et al_2012_A Kernel Two-sample Test.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/QEIC73GI/Gretton et al_2012_A Kernel Two-sample Test.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/FE27P35Z/gretton12a.html:text/html}
+}
+
 @article{ramdas_classification_2016,
   title = {Classification {{Accuracy}} as a {{Proxy}} for {{Two Sample Testing}}},
   abstract = {When data analysts train a classifier and check if its accuracy is significantly different from random guessing, they are implicitly and indirectly performing a hypothesis test (two sample testing) and it is of importance to ask whether this indirect method for testing is statistically optimal or not. Given that hypothesis tests attempt to maximize statistical power subject to a bound on the allowable false positive rate, while prediction attempts to minimize statistical risk on future predictions on unseen data, we wish to study whether a predictive approach for an ultimate aim of testing is prudent. We formalize this problem by considering the two-sample mean-testing setting where one must determine if the means of two Gaussians (with known and equal covariance) are the same or not, but the analyst indirectly does so by checking whether the accuracy achieved by Fisher's LDA classifier is significantly different from chance or not. Unexpectedly, we find that the asymptotic power of LDA's sample-splitting classification accuracy is actually minimax rate-optimal in terms of problem-dependent parameters. Since prediction is commonly thought to be harder than testing, it might come as a surprise to some that solving a harder problem does not create a information-theoretic bottleneck for the easier one. On the flip side, even though the power is rate-optimal, our derivation suggests that it may be worse by a small constant factor; hence practitioners must be wary of using (admittedly flexible) prediction methods on disguised testing problems.},
@@ -302,6 +355,24 @@ This means that design is optimized for parametric RFX inference. Not for non-pa
   file = {Mumford et al_2014_The impact of study design on pattern estimation for single-trial multivariate.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/ZXGTRKTZ/Mumford et al_2014_The impact of study design on pattern estimation for single-trial multivariate.pdf:application/pdf;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/IXZRT8C4/S105381191400768X.html:text/html}
 }
 
+@article{hotelling_generalization_1931,
+  title = {The {{Generalization}} of {{Student}}'s {{Ratio}}},
+  volume = {2},
+  issn = {0003-4851, 2168-8990},
+  doi = {10.1214/aoms/1177732979},
+  abstract = {Project Euclid - mathematics and statistics online},
+  language = {EN},
+  timestamp = {2016-04-10T07:33:59Z},
+  number = {3},
+  urldate = {2015-06-19},
+  journal = {The Annals of Mathematical Statistics},
+  author = {Hotelling, Harold},
+  month = aug,
+  year = {1931},
+  pages = {360--378},
+  file = {Hotelling_1931_The Generalization of Student's Ratio.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/2HEC4VV3/Hotelling_1931_The Generalization of Student's Ratio.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/MRVQTBMM/1177732979.html:text/html;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/VH7S648S/1177732979.html:text/html}
+}
+
 @book{fujikoshi_multivariate_2011,
   title = {Multivariate {{Statistics}}: {{High-Dimensional}} and {{Large-Sample Approximations}}},
   isbn = {978-0-470-53986-6},
@@ -369,19 +440,6 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
   year = {2010},
   pages = {1833--1863},
   file = {Ojala_Garriga_2010_Permutation Tests for Studying Classifier Performance.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/3JAFGW2X/Ojala_Garriga_2010_Permutation Tests for Studying Classifier Performance.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/Z5T8DEE6/ojala10a.html:text/html}
-}
-
-@article{schafer_shrinkage_2005,
-  title = {A shrinkage approach to large-scale covariance matrix estimation and implications for functional genomics},
-  volume = {4},
-  timestamp = {2016-07-04T21:03:44Z},
-  number = {1},
-  urldate = {2016-07-04},
-  journal = {Statistical applications in genetics and molecular biology},
-  author = {Sch{\"a}fer, Juliane and Strimmer, Korbinian and {others}},
-  year = {2005},
-  pages = {32},
-  file = {Schäfer et al_2005_A shrinkage approach to large-scale covariance matrix estimation and.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/AXE5W4FW/Schäfer et al_2005_A shrinkage approach to large-scale covariance matrix estimation and.pdf:application/pdf}
 }
 
 @unpublished{varoquaux_assessing_2016,
@@ -476,20 +534,20 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
 
 @article{hemerik_exact_2014,
   title = {Exact testing with random permutations},
-  abstract = {Permutation tests and other methods based on the permutation principle are highly popular, for instance in omics data analysis. Often random permutations are used, to limit the computation time. However, the existing theory on permutation tests usually assumes that all permutations are enumerated; little theory exists on testing with random permutations. It is known that naively using random permutations instead of the full permutation group, leads to anti-conservativeness. Also it has been claimed that adding the original observation to the random permutations solves this problem. A proof however is lacking. In this paper existing claims on validity of tests with random permutations are proven. Further, novel exact tests are presented.},
-  timestamp = {2016-07-27T08:31:25Z},
+  abstract = {The way in which random permutations have been used in various permutation-based methods leads to anti-conservativeness, especially in multiple testing contexts. Problems arise in particular for Westfall and Young's maxT method, a more recent method by Meinshausen and a global test that we introduce. We illustrate this using simulations. We solve the problem of anti-conservativeness by proving that an exact test is obtained, if the identity map is added to the randomly drawn permutations.},
+  timestamp = {2016-08-02T19:07:59Z},
   archivePrefix = {arXiv},
   eprinttype = {arxiv},
   eprint = {1411.7565},
   primaryClass = {math, stat},
-  urldate = {2016-07-27},
+  urldate = {2016-07-26},
   journal = {arXiv:1411.7565 [math, stat]},
   author = {Hemerik, Jesse and Goeman, Jelle},
   month = nov,
   year = {2014},
   keywords = {62G09,Mathematics - Statistics Theory},
   annote = {Comment: This version of the article is more focused and reader-friendly},
-  file = {Hemerik_Goeman_2014_Exact testing with random permutations.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DK287DKI/Hemerik_Goeman_2014_Exact testing with random permutations.pdf:application/pdf;arXiv.org Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/GKQ23FZS/1411.html:text/html}
+  file = {Hemerik_Goeman_2014_Exact testing with random permutations.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/6NB6FSI9/Hemerik_Goeman_2014_Exact testing with random permutations.pdf:application/pdf;Hemerik_Goeman_2014_Exact testing with random permutations.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DK287DKI/Hemerik_Goeman_2014_Exact testing with random permutations.pdf:application/pdf;arXiv.org Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/494EESV4/1411.html:text/html;arXiv.org Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/GKQ23FZS/1411.html:text/html}
 }
 
 @article{pereira_machine_2009,
@@ -509,28 +567,6 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
   year = {2009},
   pages = {S199--S209},
   file = {Pereira et al_2009_Machine learning classifiers and fMRI.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/BNQ4Z2SM/Pereira et al_2009_Machine learning classifiers and fMRI.pdf:application/pdf;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/SIQXCRCC/S1053811908012263.html:text/html}
-}
-
-@incollection{olivetti_induction_2012,
-  series = {Lecture Notes in Computer Science},
-  title = {Induction in {{Neuroscience}} with {{Classification}}: {{Issues}} and {{Solutions}}},
-  copyright = {\textcopyright{}2012 Springer-Verlag Berlin Heidelberg},
-  isbn = {978-3-642-34712-2 978-3-642-34713-9},
-  shorttitle = {Induction in {{Neuroscience}} with {{Classification}}},
-  abstract = {Machine learning and pattern recognition techniques are increasingly adopted in neuroimaging-based neuroscience research. In many applications a classifier is trained on brain data in order to predict a variable of interest. Two leading examples are brain decoding and clinical diagnosis. Brain decoding consists of predicting stimuli or mental states from concurrent functional brain data. In clinical diagnosis it is the presence or absence of a given medical condition that is predicted from brain data. Observing accurate classification is considered to support the hypothesis of variable-related information within brain data. In this work we briefly review the literature on statistical tests for this kind of hypothesis testing problem. We claim that the current approaches to this hypothesis testing problem are suboptimal, do not cover all useful settings, and that they could lead to wrong conclusions. We present a more accurate statistical test and provide examples of its superiority.},
-  language = {en},
-  timestamp = {2016-07-28T05:46:50Z},
-  number = {7263},
-  urldate = {2016-07-28},
-  booktitle = {Machine {{Learning}} and {{Interpretation}} in {{Neuroimaging}}},
-  publisher = {{Springer Berlin Heidelberg}},
-  author = {Olivetti, Emanuele and Greiner, Susanne and Avesani, Paolo},
-  editor = {Langs, Georg and Rish, Irina and Grosse-Wentrup, Moritz and Murphy, Brian},
-  year = {2012},
-  keywords = {Computer Applications,Computer Imaging; Vision; Pattern Recognition and Graphics,Data Mining and Knowledge Discovery,Image Processing and Computer Vision,pattern recognition,Probability and Statistics in Computer Science},
-  pages = {42--50},
-  file = {Olivetti et al_2012_Induction in Neuroscience with Classification.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/DNCZRCNJ/Olivetti et al_2012_Induction in Neuroscience with Classification.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TF8AQ2N9/978-3-642-34713-9_6.html:text/html},
-  doi = {10.1007/978-3-642-34713-9_6}
 }
 
 @article{simon_pitfalls_2003,
@@ -597,7 +633,7 @@ Availability: The software discussed is available in Mendel 9.0 at the UCLA Huma
 Contact: klange@ucla.edu
 Supplementary information: Supplementary data are available at Bioinformatics online.},
   language = {en},
-  timestamp = {2016-07-31T16:33:16Z},
+  timestamp = {2016-08-02T19:07:32Z},
   number = {6},
   urldate = {2016-07-31},
   journal = {Bioinformatics},
@@ -605,7 +641,7 @@ Supplementary information: Supplementary data are available at Bioinformatics on
   month = mar,
   year = {2009},
   pages = {714--721},
-  file = {Wu et al_2009_Genome-wide association analysis by lasso penalized logistic regression.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/Q3ZNM95I/Wu et al_2009_Genome-wide association analysis by lasso penalized logistic regression.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/J3FEGJ9X/714.html:text/html},
+  file = {Wu et al_2009_Genome-wide association analysis by lasso penalized logistic regression.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/2MG95MJR/Wu et al_2009_Genome-wide association analysis by lasso penalized logistic regression.pdf:application/pdf;Wu et al_2009_Genome-wide association analysis by lasso penalized logistic regression.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/Q3ZNM95I/Wu et al_2009_Genome-wide association analysis by lasso penalized logistic regression.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/J3FEGJ9X/714.html:text/html;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/UAKQECU3/714.html:text/html},
   pmid = {19176549}
 }
 
@@ -677,20 +713,6 @@ Supplementary information: Supplementary data are available at Bioinformatics on
   file = {Vayatis et al_2009_AUC optimization and the two-sample problem.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/72UPSU78/Vayatis et al_2009_AUC optimization and the two-sample problem.pdf:application/pdf;NIPS Snapshort:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/FS3AZ8MR/3838-auc-optimization-and-the-two-sample-problem.html:text/html}
 }
 
-@article{gretton_kernel_2012,
-  title = {A {{Kernel Two-Sample Test}}},
-  volume = {13},
-  issn = {ISSN 1533-7928},
-  timestamp = {2016-07-31T19:09:11Z},
-  number = {Mar},
-  urldate = {2016-07-31},
-  journal = {Journal of Machine Learning Research},
-  author = {Gretton, Arthur and Borgwardt, Karsten M. and Rasch, Malte J. and Sch{\"o}lkopf, Bernhard and Smola, Alexander},
-  year = {2012},
-  pages = {723--773},
-  file = {Gretton et al_2012_A Kernel Two-Sample Test.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/GSTU3PBK/Gretton et al_2012_A Kernel Two-Sample Test.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/FE27P35Z/gretton12a.html:text/html}
-}
-
 @article{casella_assessing_2009,
   title = {Assessing {{Robustness}} of {{Intrinsic Tests}} of {{Independence}} in {{Two-Way Contingency Tables}}},
   volume = {104},
@@ -705,6 +727,23 @@ Supplementary information: Supplementary data are available at Bioinformatics on
   year = {2009},
   pages = {1261--1271},
   file = {Casella_Moreno_2009_Assessing Robustness of Intrinsic Tests of Independence in Two-Way Contingency.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/B4AFMUVH/Casella_Moreno_2009_Assessing Robustness of Intrinsic Tests of Independence in Two-Way Contingency.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/6UJABK53/jasa.2009.html:text/html}
+}
+
+@article{scott_neyman-pearson_2005,
+  title = {A {{Neyman-Pearson}} approach to statistical learning},
+  volume = {51},
+  issn = {0018-9448},
+  doi = {10.1109/TIT.2005.856955},
+  abstract = {The Neyman-Pearson (NP) approach to hypothesis testing is useful in situations where different types of error have different consequences or a priori probabilities are unknown. For any \ensuremath{\alpha{}>}0, the NP lemma specifies the most powerful test of size \ensuremath{\alpha}, but assumes the distributions for each hypothesis are known or (in some cases) the likelihood ratio is monotonic in an unknown parameter. This paper investigates an extension of NP theory to situations in which one has no knowledge of the underlying distributions except for a collection of independent and identically distributed (i.i.d.) training examples from each hypothesis. Building on a "fundamental lemma" of Cannon et al., we demonstrate that several concepts from statistical learning theory have counterparts in the NP context. Specifically, we consider constrained versions of empirical risk minimization (NP-ERM) and structural risk minimization (NP-SRM), and prove performance guarantees for both. General conditions are given under which NP-SRM leads to strong universal consistency. We also apply NP-SRM to (dyadic) decision trees to derive rates of convergence. Finally, we present explicit algorithms to implement NP-SRM for histograms and dyadic decision trees.},
+  timestamp = {2016-08-02T07:25:03Z},
+  number = {11},
+  journal = {IEEE Transactions on Information Theory},
+  author = {Scott, C. and Nowak, R.},
+  month = nov,
+  year = {2005},
+  keywords = {a priori probability,Buildings,Condition monitoring,Convergence,convergence of numerical methods,convergence rate,decision trees,dyadic decision tree,empirical risk minimization,ERM,error analysis,explicit algorithm,Filtering,generalization error bound,Generalization error bounds,histogram,Histograms,Hypothesis testing,i.i.d.,independent-identically distributed training,learning (artificial intelligence),minimisation,monotonic likelihood ratio,Neyman-Pearson approach,Neyman–Pearson (NP) classification,NP theory,probability,risk management,signal classification,SRM,statistical learning,statistical learning theory,structural risk minimization,Testing},
+  pages = {3806--3819},
+  file = {Scott_Nowak_2005_A Neyman-Pearson approach to statistical learning.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TNIVPEG7/Scott_Nowak_2005_A Neyman-Pearson approach to statistical learning.pdf:application/pdf;IEEE Xplore Abstract Record:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/V783WGI9/abs_all.html:text/html}
 }
 
 
