--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -81,7 +81,9 @@ A practitioner may then call upon a two-group location test such as Hotelling's 
 Alternatively, if the size of a brain region is too large compared to the number of observations, so that the spatial covariance cannot be fully estimated, then a high dimensional version of Hotelling's test can be called upon, such as in \cite{schafer_shrinkage_2005} or \cite{srivastava_testing_2013}.
 For breivity, and in contrast to \emph{accuracy tests}, we will call these two-sample multivaraite tests simply \emph{location tests}, also termed \emph{class comparisons} in \cite{simon_pitfalls_2003}.
 
-At this point, it becomes unclear which is the preferred test. 
+At this point, it becomes unclear which is preferable: a location test or an accuracy test?
+The former with a heritage dating back to \cite{hotelling_generalization_1931}, and the latter being extremely popular, as the $959$ citations\footnote{GoogleScholar. Accesed on Aug 4, 2016.} of \cite{kriegeskorte_information-based_2006} suggest. 
+
 The comparison between location and accuracy tests was precisely the topic of \cite{ramdas_classification_2016}, who compared the Hotelling location test to the accuracy of \emph{Fisher's linear discriminant analysis} classifier (LDA) \citep{hastie_elements_2003}. 
 Using an asymptotic analysis, \cite{ramdas_classification_2016} concluded that accuracy and location tests are equivalent with respect to their order of convergence to a consistent test, while they differ in constants. 
 Judging by rate of convergence alone, this result may suggest that not much is (asymptoticaly) lost by using an accuracy test. 
