--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -101,9 +101,9 @@ Since typical sample sizes in neuroscience are not large, we seek to study which
 Our conclusion will be quite simple: {\em location tests almost always have more power than accuracy tests}.
 
 The main argument for our statement rests upon the observation that with typical sample sizes, the accuracy test statistic is highly discrete. 
-Discrete test statistics are known to be conservative \citep{hemerik_exact_2014-1}, since they cannot exhaust the permissible false positive rate. 
-For accuracy tests, the degree of discretization is governed by the number of samples. 
-In our running neuroscience example \citep{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
+Discrete test statistics are known to be conservative \citep{hemerik_exact_2014-1}, since they are insensitive to mild perturbations of the data, and they cannot exhaust the permissible false positive rate. 
+The degree of discretization is governed by the number of samples. 
+In our neuroscience example from \citep{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
 This number of examples is not unusual if considering this is the number of subject in a genetic study, or the number of trial-repeats in an fMRI brain scan. 
 
 The discretization effect is aggravated if the test statistic is highly concentrated. 
