--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -104,7 +104,7 @@ The main argument for our statement rests upon the observation that with typical
 Discrete test statistics are known to be conservative \citep{hemerik_exact_2014-1}, since they are insensitive to mild perturbations of the data, and they cannot exhaust the permissible false positive rate. 
 The degree of discretization is governed by the number of samples. 
 In our neuroscience example from \citep{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
-This number of examples is not unusual if considering this is the number of subject in a genetic study, or the number of trial-repeats in an fMRI brain scan. 
+This number of examples is not unusual if considering this is the number of subjects, or the number of trial-repeats in an neuroimaging study. 
 
 The discretization effect is aggravated if the test statistic is highly concentrated. 
 For an intuition consider the usage of the \emph{train} accuracy test statistic (i.e., not cross validated).
