--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -145,11 +145,11 @@ The design of a permutation test using the prediction accuracy, requires the fol
 \item Is the statistic cross validated or not?
 \item For a K-fold cross validated test statistic: should the data be refolded in each permutation? 
 \item Permute labels of features?
-\item For a K-fold cross validated test statistic: should the data folding balanced? (a.k.a. stratified).
+\item For a K-fold cross validated test statistic: should the data folding balanced (a.k.a.\ stratified)?
 \item How many folds? 
 \end{enumerate}
 
-We will now address these questions while bearing in mind that unlike the typical supervised learning setup, we are not interested in an unbiased estimate of the prediction error, but rather in the mere detection of a difference between two groups, leading to a better-than-chance accuracy. 
+We will now address these questions while bearing in mind that unlike the typical supervised learning setup, we are not interested in an unbiased estimate of the prediction error, but rather in the mere detection of a difference between two groups. 
 
 \paragraph{How to estimate accuracy?}
 \label{sec:estimate_accuracy}
